Add token to checkout workflow

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -28,6 +28,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
       with:
+        token: ${{secrets.X_EDR_REPO_PAK}}
         submodules: 'true'
   
     # Initializes the CodeQL tools for scanning.
