--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -30,7 +30,13 @@ jobs:
       with:
         token: ${{secrets.X_EDR_REPO_PAK}}
         submodules: 'true'
-  
+
+    - name: Mount bazel cache
+      uses: actions/cache@v3
+      with:
+        path: "/home/runner/.cache/bazel"
+        key: bazel
+        
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v2
@@ -46,13 +52,10 @@ jobs:
 
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
-
-    #   If the Autobuild fails above, remove it and uncomment the following three lines.
-    #   modify them (or add more) to build your code if your project, please refer to the EXAMPLE below for guidance.
-
-    - run: |
-        echo "Run, Build Application using script"
-        .github/workflows/buildscript.sh
+    - name: Build and Test
+      run: |
+        bazel build -c opt --config=libc++ eigenmath:all
+        bazel test -c opt --config=libc++ eigenmath:all
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
