--- a/eigenmath/BUILD
+++ b/eigenmath/BUILD
@@ -12,8 +12,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test", "cc_proto_library")
-load("@rules_proto//proto:defs.bzl", "proto_library")
+load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
+load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
+load("@protobuf//bazel:proto_library.bzl", "proto_library")
 
 licenses(["notice"])
 
@@ -70,16 +71,16 @@ cc_library(
         "vector_utils.h",
     ],
     deps = [
-        "@com_google_absl//absl/base:core_headers",
-        "@com_google_absl//absl/container:flat_hash_set",
-        "@com_google_absl//absl/log",
-        "@com_google_absl//absl/log:check",
-        "@com_google_absl//absl/status",
-        "@com_google_absl//absl/status:statusor",
-        "@com_google_absl//absl/strings",
-        "@com_google_absl//absl/strings:str_format",
-        "@com_google_absl//absl/types:optional",
-        "@com_google_absl//absl/types:span",
+        "@abseil-cpp//absl/base:core_headers",
+        "@abseil-cpp//absl/container:flat_hash_set",
+        "@abseil-cpp//absl/log",
+        "@abseil-cpp//absl/log:check",
+        "@abseil-cpp//absl/status",
+        "@abseil-cpp//absl/status:statusor",
+        "@abseil-cpp//absl/strings",
+        "@abseil-cpp//absl/strings:str_format",
+        "@abseil-cpp//absl/types:optional",
+        "@abseil-cpp//absl/types:span",
         "@eigen",
         "@x_edr_genit//genit:iterators",
     ],
@@ -108,9 +109,9 @@ cc_library(
     deps = [
         ":eigenmath",
         ":eigenmath_cc_proto",
-        "@com_google_absl//absl/log:check",
-        "@com_google_absl//absl/status",
-        "@com_google_absl//absl/strings",
+        "@abseil-cpp//absl/log:check",
+        "@abseil-cpp//absl/status",
+        "@abseil-cpp//absl/strings",
     ],
 )
 
@@ -125,7 +126,7 @@ cc_test(
         ":eigenmath",
         ":matchers",
         ":sampling",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -145,8 +146,8 @@ cc_library(
     hdrs = ["matchers.h"],
     deps = [
         ":eigenmath",
-        "@com_google_googletest//:gtest",
         "@eigen",
+        "@googletest//:gtest",
         "@x_edr_genit//genit:iterators",
     ],
 )
@@ -154,7 +155,7 @@ cc_library(
 cc_library(
     name = "incremental_stats",
     hdrs = ["incremental_stats.h"],
-    deps = ["@com_google_absl//absl/time"],
+    deps = ["@abseil-cpp//absl/time"],
 )
 
 cc_library(
@@ -167,7 +168,7 @@ cc_test(
     srcs = ["sampling_test.cc"],
     deps = [
         ":sampling",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -178,7 +179,7 @@ cc_test(
         ":eigenmath",
         ":matchers",
         ":test_constants",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
         "@eigen",
     ],
 )
@@ -190,8 +191,8 @@ cc_test(
     ],
     deps = [
         ":eigenmath",
-        "@com_google_absl//absl/types:optional",
-        "@com_google_googletest//:gtest_main",
+        "@abseil-cpp//absl/types:optional",
+        "@googletest//:gtest_main",
         "@eigen",
     ],
 )
@@ -203,7 +204,7 @@ cc_test(
     ],
     deps = [
         ":eigenmath",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -214,7 +215,7 @@ cc_test(
     ],
     deps = [
         ":eigenmath",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -225,8 +226,8 @@ cc_test(
     ],
     deps = [
         ":incremental_stats",
-        "@com_google_absl//absl/time",
-        "@com_google_googletest//:gtest_main",
+        "@abseil-cpp//absl/time",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -239,7 +240,7 @@ cc_test(
         ":eigenmath",
         ":matchers",
         ":sampling",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -250,7 +251,7 @@ cc_test(
     ],
     deps = [
         ":eigenmath",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -260,7 +261,7 @@ cc_test(
     deps = [
         ":eigenmath",
         ":matchers",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -273,7 +274,7 @@ cc_test(
         ":eigenmath",
         ":matchers",
         ":sampling",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
         "@eigen",
     ],
 )
@@ -284,7 +285,7 @@ cc_test(
     deps = [
         ":eigenmath",
         ":matchers",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -297,7 +298,7 @@ cc_test(
         ":eigenmath",
         ":matchers",
         ":sampling",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
         "@eigen",
     ],
 )
@@ -310,7 +311,7 @@ cc_test(
     deps = [
         ":eigenmath",
         ":matchers",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
         "@eigen",
     ],
 )
@@ -324,7 +325,7 @@ cc_test(
         ":eigenmath",
         ":matchers",
         ":sampling",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -337,7 +338,7 @@ cc_test(
         ":eigenmath",
         ":matchers",
         ":sampling",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
         "@eigen",
     ],
 )
@@ -351,7 +352,7 @@ cc_test(
         ":eigenmath",
         ":matchers",
         ":sampling",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
         "@eigen",
     ],
 )
@@ -364,7 +365,7 @@ cc_test(
     deps = [
         ":eigenmath",
         ":matchers",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -377,7 +378,7 @@ cc_test(
         ":eigenmath",
         ":matchers",
         ":test_utils",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -390,7 +391,7 @@ cc_test(
         ":eigenmath",
         ":matchers",
         ":test_utils",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -401,7 +402,7 @@ cc_test(
     ],
     deps = [
         ":eigenmath",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -414,11 +415,11 @@ cc_test(
         ":eigenmath",
         ":matchers",
         ":sampling",
-        "@com_google_absl//absl/log:check",
-        "@com_google_absl//absl/random",
-        "@com_google_absl//absl/strings:str_format",
-        "@com_google_benchmark//:benchmark",
-        "@com_google_googletest//:gtest_main",
+        "@abseil-cpp//absl/log:check",
+        "@abseil-cpp//absl/random",
+        "@abseil-cpp//absl/strings:str_format",
+        "@google_benchmark//:benchmark",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -429,7 +430,7 @@ cc_test(
     ],
     deps = [
         ":eigenmath",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -442,7 +443,7 @@ cc_test(
         ":eigenmath",
         ":matchers",
         ":sampling",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -454,7 +455,7 @@ cc_test(
     deps = [
         ":eigenmath",
         ":matchers",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -466,8 +467,8 @@ cc_test(
     deps = [
         ":eigenmath",
         ":sampling",
-        "@com_google_benchmark//:benchmark",
-        "@com_google_googletest//:gtest_main",
+        "@google_benchmark//:benchmark",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -479,7 +480,7 @@ cc_test(
     deps = [
         ":eigenmath",
         ":matchers",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -490,7 +491,7 @@ cc_test(
     ],
     deps = [
         ":eigenmath",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -503,9 +504,9 @@ cc_test(
         ":eigenmath",
         ":matchers",
         ":sampling",
-        "@com_google_absl//absl/random:distributions",
-        "@com_google_benchmark//:benchmark",
-        "@com_google_googletest//:gtest_main",
+        "@abseil-cpp//absl/random:distributions",
+        "@google_benchmark//:benchmark",
+        "@googletest//:gtest_main",
         "@eigen",
     ],
 )
@@ -517,9 +518,9 @@ cc_test(
         ":eigenmath",
         ":matchers",
         ":sampling",
-        "@com_google_absl//absl/random:distributions",
-        "@com_google_benchmark//:benchmark",
-        "@com_google_googletest//:gtest_main",
+        "@abseil-cpp//absl/random:distributions",
+        "@google_benchmark//:benchmark",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -532,7 +533,7 @@ cc_test(
         ":eigenmath",
         ":matchers",
         ":sampling",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
         "@eigen",
     ],
 )
@@ -545,7 +546,7 @@ cc_test(
     deps = [
         ":eigenmath",
         ":matchers",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -557,7 +558,7 @@ cc_test(
     deps = [
         ":eigenmath",
         ":matchers",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
         "@eigen",
     ],
 )
@@ -569,7 +570,7 @@ cc_test(
     ],
     deps = [
         ":eigenmath",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -581,7 +582,7 @@ cc_test(
     deps = [
         ":eigenmath",
         ":matchers",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
         "@eigen",
     ],
 )
@@ -595,7 +596,7 @@ cc_test(
         ":eigenmath",
         ":matchers",
         ":sampling",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -617,7 +618,7 @@ cc_library(
     name = "compare_vectors",
     hdrs = ["compare_vectors.h"],
     deps = [
-        "@com_google_absl//absl/types:span"
+        "@abseil-cpp//absl/types:span"
     ],
 )
 
@@ -629,8 +630,8 @@ cc_test(
     deps = [
         ":compare_vectors",
         ":eigenmath",
-        "@com_google_absl//absl/types:span",
-        "@com_google_googletest//:gtest_main",
+        "@abseil-cpp//absl/types:span",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -639,8 +640,8 @@ cc_library(
     srcs = ["quasi_random_vector.cc"],
     hdrs = ["quasi_random_vector.h"],
     deps = [
-        "@com_google_absl//absl/log:check",
         ":eigenmath",
+        "@abseil-cpp//absl/log:check",
     ],
 )
 
@@ -649,6 +650,6 @@ cc_test(
     srcs = ["quasi_random_vector_test.cc"],
     deps = [
         ":quasi_random_vector",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
